--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,18 @@
+#github相关配置
 github:
   client:
     id: Iv1.78a77355b546caf5
     secret: a03ba9692b3d6e5f53fa56800f5af2b0a045b67f
   redirect:
     uri: http://localhost:8080/callback
+#数据库连接
+spring:
+  datasource:
+    username: root
+    password: 123456
+    url: jdbc:mysql://192.168.124.9:3306/springboot_community
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#启用驼峰命名规则
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
